ls: reduce home page column padding to prevent word wrap on 3rd column

--- a/middlebury.edu/2010/sass/ls/ls.scss
+++ b/middlebury.edu/2010/sass/ls/ls.scss
@@ -52,8 +52,8 @@
 
   .column {
     text-align: center;
-    padding-left: 50px;
-    padding-right: 49px;
+    padding-left: 35px;
+    padding-right: 35px;
   }
 
   h3 {
